# Landscraper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0002_relax_schema_add_scoring.py  77e8c27216a6_initial_schema.py
ansible/: deploy.yml  inventory.yml  setup.yml
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Layout.tsx  LeadMap.tsx  PipelineNode.tsx  StatCard.tsx  TierBadge.tsx
dashboard/src/lib/: api.ts  hooks.ts  types.ts
dashboard/src/pages/: Dashboard.tsx  LeadDetail.tsx  LeadExplorer.tsx  Pipeline.tsx
docker/: Dockerfile  docker-bake.hcl  docker-compose.dev.yml  docker-compose.prod.yml
docs/plans/: 2026-03-05-dashboard-design.md  2026-03-05-dashboard-implementation.md  2026-03-05-langsmith-tracing.md  2026-03-05-phase-0-research-and-setup.md  2026-03-06-dashboard-polish.md  2026-03-06-persistent-storage-and-sources.md  2026-03-06-persistent-storage-design.md
docs/research/: gemini_langgraph_raw.md  gemini_lead_format_raw.md  gemini_sources_raw.md  lead_format.md  sources.md  verified_sources_2026.md
src/landscraper/: config.py  db.py  tracing.py
src/landscraper/agents/: llm.py  nodes.py  orchestrator.py  state.py
src/landscraper/api/: __init__.py  (+4 more)
tests/: conftest.py  test_api.py  test_consensus.py  test_full_cycle.py  test_improvement.py  test_models.py  test_notifications.py  test_orchestrator.py  test_pipeline.py  test_scrapers.py  test_tracing.py
(+37 files in other folders)
